@@ -4,7 +4,7 @@
 
 pkgname=subversion
 pkgver=1.6.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Replacement for CVS, another versioning system (svn)"
 arch=(i686 x86_64)
 license=('apache' 'bsd')
@@ -18,7 +18,7 @@ source=(http://svn.collab.net/tarballs/${pkgname}-${pkgver}.tar.gz
 backup=('etc/xinetd.d/svn' 'etc/conf.d/svnserve')
 url="http://subversion.tigris.org/"
 provides=('svn')
-options=('!makeflags' 'libtool')
+options=('!makeflags' '!libtool')
 
 build() {
    cd $startdir/src/${pkgname}-${pkgver}
@@ -71,26 +71,9 @@ build() {
    install -m 755 $startdir/src/svnserve $startdir/pkg/etc/rc.d
    install -m 644 $startdir/src/svn $startdir/pkg/etc/xinetd.d
    install -m 644 $startdir/src/svnserve.conf $startdir/pkg/etc/conf.d/svnserve
-   install -m 755 $startdir/src/svnmerge.py $pkgdir/usr/bin/svnmerge
-   #install -m 755 $startdir/src/subversion-$pkgver/contrib/client-side/svnmerge/svnmerge.py $startdir/pkg/usr/bin/svnmerge
+   install -m 755 $startdir/src/subversion-$pkgver/contrib/client-side/svnmerge/svnmerge.py $startdir/pkg/usr/bin/svnmerge
    install -D -m 644 $startdir/src/subversion-$pkgver/COPYING $startdir/pkg/usr/share/licenses/$pkgname/LICENSE
-
-   #libtoolslay not all because of kdesdk
-   find ${startdir}/pkg/usr/lib/httpd/modules -name '*.la' -exec rm {} \;
-   find ${startdir}/pkg/usr/lib/ruby -name '*.la' -exec rm {} \;
-   find ${startdir}/pkg/usr/lib/python2.6 -name '*.la' -exec rm {} \;
 }
-md5sums=('b74985c9191d4a652a9f618a06171880'
-         'c5a2e490b3e58c6bd2ca3a2e72b71845'
-         'a0db6dd43af33952739b6ec089852630'
-         'c459e299192552f61578f3438abf0664'
-         '9540c341d669b3cdc27dcf2d36727aee')
-md5sums=('32014fe70397357fa1e0ef8f937a0232'
-         '86b500a8e10bb88f3d48c69774ab7049'
-         'c5a2e490b3e58c6bd2ca3a2e72b71845'
-         'a0db6dd43af33952739b6ec089852630'
-         'c459e299192552f61578f3438abf0664'
-         '9540c341d669b3cdc27dcf2d36727aee')
 md5sums=('32014fe70397357fa1e0ef8f937a0232'
          'c5a2e490b3e58c6bd2ca3a2e72b71845'
          'a0db6dd43af33952739b6ec089852630'
